--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,13 @@
-#URL приложения, которое тестируем
+# URL приложения которое тестируем
 app.url=https://www.sberbank.ru/ru/person
 
-#Браузер по умолчанию
-type.browser = chrome
+# Дефолтный браузер
+type.browser=chrome
 
-#Путь к драйверам
-path.chrome.driver.windows=src/main/resources/webDriver/chromedriver.exe
-path.gecko.driver.windows=src/main/resources/webDriver/geckodriver-x64.exe
-path.chrome.driver.mac=
-path.gecko.driver.mac=
-path.chrome.driver.unix=
-path.gecko.driver.unix=
+# Путь к драверам
+path.chrome.driver=src/main/resources/webDriver/chromedriver.exe
+path.gecko.driver=src/main/resources/webDriver/geckodriver_linux
 
-#Настройки таймаутов по умолчанию
-implicitly.wait=5
-page.load.timeout=10
-
-#Настройки для подключения к бд
-db.type=mysql
-db.host=
-db.port=
-db.schema.name=
-db.time.zone=
-db.user.login=
-db.user.password=
+# Дефолтные настройки таймаутов
+implicitly.wait=10
+page.load.timeout=15
